--- a/labs/index.qmd
+++ b/labs/index.qmd
@@ -27,7 +27,7 @@ W04 (Nov 13 -- Nov 17):
 W05 (Nov 20 -- Nov 22):
 
 -   Spatial Analysis; Obtain data from multiple sources
--   Lab 5: Obesogenic Built Environment: sf, osmdata packages
+-   Lab 5: Walkable Environment: sf, osmdata packages
 
 W06 (Nov 27 -- Dec 1):
 
